--- a/group.html
+++ b/group.html
@@ -116,7 +116,7 @@
   <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/ricleanu/">Ruxandra Icleanu</a></b>
   <ul>
     <li style="margin-top: 1ex;">Research Intern at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2024-06 to 2024-09:<br/>
-    Security against Unverified Stateful Code in F*
+    <a href="http://arxiv.org/abs/2503.00404">Security against Unverified Stateful Code in F*</a>
     </li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
@@ -138,7 +138,7 @@
   <li style="margin-bottom: 1ex;"><b><a href="https://github.com/jos-len">Joseph Lenormand</a></b>
   <ul>
     <li style="margin-top: 1ex;">Research Intern at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2024-02 to 2024-06:<br/>
-    Nanopass back-translation of multiple traces for secure compilation proofs
+    <a href="http://arxiv.org/abs/2503.19609">Nanopass back-translation of multiple traces for secure compilation proofs</a>
     </li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
@@ -160,7 +160,7 @@
   <li style="margin-bottom: 1ex;"><b><a href="https://dongjaelee1.github.io">Dongjae Lee</a></b>
   <ul>
     <li style="margin-top: 1ex;">Research Intern at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2023-03 to 2023-08:
-    Back-Translation Proof for Formally Secure Compilation of Compartmentalized C Programs
+    <a href="http://arxiv.org/abs/2401.16277">Back-Translation Proof for Formally Secure Compilation of Compartmentalized C Programs</a>
     </li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
@@ -222,7 +222,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
   <li style="margin-bottom: 1ex;"><b><a href="https://people.mpi-sws.org/~algeorges">Aïna Linn Georges</b></a>
   <ul>
     <li style="margin-top: 1ex;">Research Intern at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2022-07 to 2022-09:<br/>
-    Capabilities Backend to CompCert with Secure Components
+    <a href="http://arxiv.org/abs/2401.16277">Capabilities Backend to the SECOMP Secure Compiler</a>
     </li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
@@ -242,7 +242,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
   </div>  
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://dcc.fceia.unr.edu.ar/~erivas/">Exequiel Rivas</a></b>
+  <li style="margin-bottom: 1ex;"><b><a href="http://web.archive.org/web/20230111142712/https://dcc.fceia.unr.edu.ar/~erivas/">Exequiel Rivas</a></b>
   <ul>
     <li style="margin-top: 1ex;">Starting Researcher Position at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> 2019-03 to 2021-02:<br/>
       <a href="https://catalin-hritcu.github.io/students/topics/2018/fstar-topics-tezos.pdf">The Formal Semantics and Evolution of the F* Verification System</a></li>
