--- a/group.html
+++ b/group.html
@@ -397,8 +397,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
     <li style="margin-top: 1ex;">Research Engineer at <a href="https://www.msr-inria.fr/">MSR-Inria</a>, 2017-01 to 2017-07:
     Refactoring the F* type-checker</li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[<b>Now Assistant Professor at <a href="https://www.aup.edu/academics/undergraduate/majors/computer-science">The American University of Paris</a>,</b>
-Founder and CEO of <a href="https://www.legai.app">LegAI</a>, and PostDoc at <a href="https://wwwfr.uni.lu/recherche/fstm/dcs">University of Luxembourg</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Then Assistant Professor at <a href="https://www.aup.edu/academics/undergraduate/majors/computer-science">The American University of Paris</a>][Now Founder and CEO of <a href="https://www.legai.app">LegAI</a>, and PostDoc at <a href="https://wwwfr.uni.lu/recherche/fstm/dcs">University of Luxembourg</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.williamjbowman.com">William J. Bowman</a></b>
   <ul>
