--- a/group.html
+++ b/group.html
@@ -357,7 +357,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
   </div>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://aaronweiss.us/">Aaron Weiss</a></b> (Visiting Researcher from Northeastern University, 2017-09 to 2018-07)</li>
+  <li style="margin-bottom: 1ex;"><b><a href="https://weiss.city">Aaron/Ariel Weiss</a></b> (Visiting Researcher from Northeastern University, 2017-09 to 2018-07)</li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://www.stronati.org/">Marco Stronati</a></b>
   <ul>
@@ -397,7 +397,8 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
     <li style="margin-top: 1ex;">Research Engineer at <a href="https://www.msr-inria.fr/">MSR-Inria</a>, 2017-01 to 2017-07:
     Refactoring the F* type-checker</li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Then Assistant Professor at <a href="https://www.aup.edu/academics/undergraduate/majors/computer-science">The American University of Paris</a>][Now Founder and CEO of <a href="https://www.legai.app">LegAI</a>, and PostDoc at <a href="https://wwwfr.uni.lu/recherche/fstm/dcs">University of Luxembourg</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Then Assistant Professor at <a href="https://www.aup.edu/academics/undergraduate/majors/computer-science">The American University of Paris</a>]<br/>
+  [Now Founder and CEO of <a href="https://www.legai.app">LegAI</a>, and PostDoc at <a href="https://wwwfr.uni.lu/recherche/fstm/dcs">University of Luxembourg</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.williamjbowman.com">William J. Bowman</a></b>
   <ul>
@@ -421,7 +422,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
 [Now Senior Software Engineer at Mozilla]
 </div></li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.engboris.fr/research/">Boris Eng</a></b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://web.archive.org/web/20231210053550/https://www.engboris.fr/research/">Boris Eng</a></b>
   <ul>
     <li style="margin-top: 1ex;">Research Internship at Inria (advised by Yannis Juglaret), 2016-04 to 2016-06:<br/>
       <a href="https://arxiv.org/abs/1602.04503">Partial type safety using Coq</a>
@@ -455,8 +456,8 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
       <a href="students/topics/2015/quick-chick.pdf">Integrating Functional Logic Programming with Constraint Solving for Random Generation of Structured Data</a>
     </li>
   </ul>
-    <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>] [Then PhD student at <a href="https://www.cis.upenn.edu/~plclub/">University of Pennsylvania</a>]<br/>
-[Now PostDoc at University of Edinburgh]
+    <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>] [Then PhD student at <a href="https://www.cis.upenn.edu/~plclub/">University of Pennsylvania</a>]
+   [Then PostDoc at University of Edinburgh] [Now INRIA research engineer]
 </div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://pageperso.lis-lab.fr/simon.forest">Simon Forest</a></b>
