--- a/group.html
+++ b/group.html
@@ -54,6 +54,17 @@
 [PhD student at Inria/ENS Paris, then at <a href="https://www.mpi-sp.org/">MPI-SP</a>/RUB]
 </div></li>
 
+  <li style="margin-bottom: 1ex;"><b><a href="https://sf.snu.ac.kr/yonghyun.kim/">Yonghyun Kim</a></b> (Postdoctoral Researcher, MPI-SP)</li>
+  <!-- started in May 2025 -->
+
+  <li style="margin-bottom: 1ex;"><b><a href="">Basile Schlosser</a></b> (Research Intern, ENS Paris-Saclay)</li>
+  <!-- started in February 2025 -->
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://jonathan.baumann.zip">Jonathan Baumann</a></b> (Research Intern, ENS Paris-Saclay)</li>
+  <!-- started in April 2025 -->
+
+  <li style="margin-bottom: 1ex;"><a href="https://www.linkedin.com/in/julayleathermanbrooks/">Julay Leatherman-Brooks</a> (Research Intern, Portland State University) -- starting in July 2025</li>
+
   <li style="margin-bottom: 1ex;"><b><a href="https://robblanco.github.io/">Roberto Blanco</a></b>
   <ul>
     <li style="margin-top: 1ex;">Visitor at <a href="https://www.mpi-sp.org/">MPI-SP</a>, since 2025-05
@@ -65,21 +76,9 @@
       <a href="https://arxiv.org/abs/1802.00588">Formally Secure Compilation Despite Dynamic Compromise</a></li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
-  [Started as Associate Professor at TU Eindhoven in May 2025]
+  [<b>Started as Associate Professor at TU Eindhoven in May 2025</b>]
   </div>
   </li>
-
-  <li style="margin-bottom: 1ex;"><b><a href="https://sf.snu.ac.kr/yonghyun.kim/">Yonghyun Kim</a></b> (Postdoctoral Researcher, MPI-SP)</li>
-  <!-- started in May 2025 -->
-
-  <li style="margin-bottom: 1ex;"><b><a href="">Basile Schlosser</a></b> (Research Intern, ENS Paris-Saclay)</li>
-  <!-- started in February 2025 -->
-
-  <li style="margin-bottom: 1ex;"><b><a href="https://jonathan.baumann.zip">Jonathan Baumann</a></b> (Research Intern, ENS Paris-Saclay)</li>
-  <!-- started in April 2025 -->
-
-
-  <li style="margin-bottom: 1ex;"><a href="https://www.linkedin.com/in/julayleathermanbrooks/">Julay Leatherman-Brooks</a> (Research Intern, Portland State University) -- starting in July 2025</li>
 </ul>
 
 
