--- a/index.html
+++ b/index.html
@@ -579,8 +579,6 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><a href="http://jerem.yt/">Jérémy Thibault</a> (PhD Student, MPI-SP)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://robblanco.github.io/">Roberto (Rob) Blanco</a> (Postdoctoral Researcher, MPI-SP)</li>
-
   <li style="margin-bottom: 1ex;"><a href="https://jonathan.baumann.zip/">Jonathan Baumann</a> (Research Intern, ENS Paris-Saclay)</li>
   <!-- started in April 2025 -->
 
@@ -591,6 +589,7 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><a href="https://www.linkedin.com/in/julayleathermanbrooks/">Julay Leatherman-Brooks</a> (Research Intern, Portland State University) -- starting in July 2025</li>
 
+  <li style="margin-bottom: 1ex;"><a href="https://robblanco.github.io/">Roberto (Rob) Blanco</a> (Visitor and Former PostDoc, MPI-SP; Associate Professor at TU/e)</li>
 </ul>
 
 
