--- a/index.html
+++ b/index.html
@@ -633,9 +633,10 @@ I am very fortunate to work with a group of outstanding students and starting re
     Sebastian Harwig, and
     C&#259;t&#259;lin Hri&#539;cu.
     <b><a href="http://arxiv.org/abs/2502.03203">FSLH: Flexible Mechanized Speculative Load Hardening</a></b>.
-    Accepted at CSF'25. Draft from February 2025.
+    In <a href="https://www.ieee-security.org/TC/CSF2025/">38th IEEE Computer Security Foundations Symposium (CSF)</a>.
+    June 2025.
     <ul style="font-size: small">
-      <li><a href="https://nce.mpi-sp.org/index.php/s/nggS2PMEWa5gynJ">Rocq development</a></li>
+      <li><a href="https://github.com/secure-compilation/fslh-rocq">Rocq development</a></li>
     </ul>
   </li>
 
