--- a/index.html
+++ b/index.html
@@ -628,6 +628,7 @@ I am very fortunate to work with a group of outstanding students and starting re
   </li>
 
   <li style="margin-bottom: 1ex;">
+    Jonathan Baumann,
     Roberto Blanco,
     Léon Ducruet,
     Sebastian Harwig, and
