--- a/publications.html
+++ b/publications.html
@@ -26,6 +26,7 @@
 <ol start="1" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Jonathan Baumann,
     Roberto Blanco,
     Léon Ducruet,
     Sebastian Harwig, and
