--- a/publications.html
+++ b/publications.html
@@ -768,7 +768,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
     Joseph Lenormand, and
     C&#259;t&#259;lin Hri&#539;cu.
     <b><a href="http://arxiv.org/abs/2503.19609">Nanopass Back-Translation of Call-Return Trees for Mechanized Secure Compilation Proofs</a></b>.
-    Submitted to ITP'25. Draft from March 2025.
+    Accepted at ITP'25. Draft from March 2025.
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/nanopass-bt">Rocq development</a></li>
     </ul>
@@ -783,7 +783,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
     Exequiel Rivas, and
     Théo Winterhalter.
     <b><a href="http://arxiv.org/abs/2503.00404">SecRef*: Securely Sharing Mutable References Between Verified and Unverified Code in F*</a></b>.
-    Submitted to ICFP'25. Draft from February 2025.
+    Conditionally Accepted at ICFP'25. Draft from February 2025.
     <ul style="font-size: small">
       <li><a href="https://github.com/andricicezar/fstar-io/tree/master/state">F* development</a></li>
     </ul>
