--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@ I am very fortunate to work with a group of outstanding students and starting re
     Joseph Lenormand, and
     C&#259;t&#259;lin Hri&#539;cu.
     <b><a href="http://arxiv.org/abs/2503.19609">Nanopass Back-Translation of Call-Return Trees for Mechanized Secure Compilation Proofs</a></b>.
-    Submitted to ITP'25. Draft from March 2025.
+    Accepted at ITP'25. Draft from March 2025.
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/nanopass-bt">Rocq development</a></li>
     </ul>
@@ -621,7 +621,7 @@ I am very fortunate to work with a group of outstanding students and starting re
     Exequiel Rivas, and
     Théo Winterhalter.
     <b><a href="http://arxiv.org/abs/2503.00404">SecRef*: Securely Sharing Mutable References Between Verified and Unverified Code in F*</a></b>.
-    Submitted to ICFP'25. Draft from February 2025.
+    Conditionally Accepted at ICFP'25. Draft from February 2025.
     <ul style="font-size: small">
       <li><a href="https://github.com/andricicezar/fstar-io/tree/master/state">F* development</a></li>
     </ul>
