--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://robblanco.github.io">Roberto "Rob" Blanco</a></b>, previously PostDoc in my group, started as Associate Professor at <a href="">TU Eindhoven</a> in May 2025.</li>
+  <li style="margin-bottom: 1ex;"><b><a href="https://robblanco.github.io">Roberto "Rob" Blanco</a></b>, previously PostDoc in my group, started as Associate Professor at <a href="https://www.tue.nl/en/our-university/departments/mathematics-and-computer-science">TU Eindhoven</a> in May 2025.</li>
 
   <li style="margin-bottom: 1ex;">
     <b><a href="https://icfp25.sigplan.org">International Conference on Functional Programming</a>, ICFP</b>
