--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
     (<b>Associate PC Chair</b> in <a href="https://sp2026.ieee-security.org">2026</a>,
      <br/>also PC Member in <a href="https://www.ieee-security.org/TC/SP2021/">2020</a>)
   <ul>
-  <li><a href="https://sp2026.ieee-security.org">IEEE SP 2026</a> abstract deadlines: 29 May 2025 and 6 November 2025</li>
-  <li><a href="https://sp2026.ieee-security.org">IEEE SP 2026</a> submission deadlines: 5 June 2025 and 13 November 2025</li>
+  <li><a href="https://sp2026.ieee-security.org">IEEE SP 2026</a> abstract deadlines: <strike>29 May 2025 and</strike> 6 November 2025</li>
+  <li><a href="https://sp2026.ieee-security.org">IEEE SP 2026</a> submission deadlines: <strike>5 June 2025 and</strike> 13 November 2025</li>
   <li><a href="https://sp2026.ieee-security.org">IEEE SP 2026</a> symposium: 18-21 May 2026 in San Francisco</li>
   </ul>
   </li>
@@ -198,7 +198,7 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
   </li>
 
   <li style="margin-bottom: 1ex;">
-    <b><a href="https://dl.acm.org/journal/tops">Transactions on Privacy and Security</a>, TOPS</b> (Editor since May 2024)
+    <b><a href="https://dl.acm.org/journal/tops">Transactions on Privacy and Security</a>, TOPS</b> (Editor May 2024--June 2025)
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://danel.ahman.ee">Danel Ahman</a></b>, former PostDoc in my group, started as Associate Professor at <a href="https://cs.ut.ee/en">University of Tartu</a> in January 2024.</li>
