--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><b>Distinguished Paper Award at <a href="https://www.ieee-security.org/TC/CSF2025">CSF 2025</a></b> for <br/>
+  <a href="http://arxiv.org/abs/2502.03203">FSLH: Flexible Mechanized Speculative Load Hardening</a>
+  </li>
+
   <li style="margin-bottom: 1ex;">
     <b><a href="https://sp2026.ieee-security.org">IEEE Symposium on Security and Privacy</a></b>
     (<b>Associate PC Chair</b> in <a href="https://sp2026.ieee-security.org">2026</a>,
@@ -635,7 +639,7 @@ I am very fortunate to work with a group of outstanding students and starting re
     C&#259;t&#259;lin Hri&#539;cu.
     <b><a href="http://arxiv.org/abs/2502.03203">FSLH: Flexible Mechanized Speculative Load Hardening</a></b>.
     In <a href="https://www.ieee-security.org/TC/CSF2025/">38th IEEE Computer Security Foundations Symposium (CSF)</a>.
-    June 2025.
+    June 2025. <b>Distinguished Paper Award.</b>
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/fslh-rocq">Rocq development</a></li>
     </ul>
