--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@ I am very fortunate to work with a group of outstanding students and starting re
     Exequiel Rivas, and
     Théo Winterhalter.
     <b><a href="http://arxiv.org/abs/2503.00404">SecRef*: Securely Sharing Mutable References Between Verified and Unverified Code in F*</a></b>.
-    Conditionally Accepted at ICFP'25. Draft from February 2025.
+    Accepted at ICFP'25. Draft from February 2025.
     <ul style="font-size: small">
       <li><a href="https://github.com/andricicezar/fstar-io/tree/master/state">F* development</a></li>
     </ul>
