--- a/group.html
+++ b/group.html
@@ -456,7 +456,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
     </li>
   </ul>
     <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>] [Then PhD student at <a href="https://www.cis.upenn.edu/~plclub/">University of Pennsylvania</a>]
-   [Then PostDoc at University of Edinburgh] [Now INRIA research engineer]
+   [Then PostDoc at University of Edinburgh] <b>[Now INRIA research engineer on <a href="https://github.com/creusot-rs/creusot">Creusot</a>]
 </div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://pageperso.lis-lab.fr/simon.forest">Simon Forest</a></b>
