--- a/group.html
+++ b/group.html
@@ -86,7 +86,7 @@
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b><a href="">Léon Ducruet</a></b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://dblp.org/pid/398/1897.html">Léon Ducruet</a></b>
   <ul>
     <li style="margin-top: 1ex;">Research Intern at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2024-06 to 2024-09:<br/>
      <a href="http://arxiv.org/abs/2502.03203">FSLH: Flexible Mechanized Speculative Load Hardening</a>
@@ -352,7 +352,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
     <li style="margin-top: 1ex;">Visiting Professor on Sabbatical: 2017-09 to 2018-07</li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
-  [<b>Full Professor &amp; Associate Dean for Graduate Programs at <a href="">Northeastern University</a></b>]
+  [<b>Full Professor &amp; Associate Dean for Graduate Programs at <a href="https://www.khoury.northeastern.edu/">Northeastern University</a></b>]
   </div>
   </li>
 
