--- a/group.html
+++ b/group.html
@@ -468,7 +468,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
 [MSc Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]
 [Then MSc student at <a href="http://www.math.univ-paris-diderot.fr/m2lmfi/">LMFI</a>]
-[Then PhD Student at  <a href="https://www.polytechnique.edu/en/department-of-computer-science">École Polytechnique</a>]<br/>
+[Then PhD Student at  <a href="https://www.polytechnique.edu/en/department-of-computer-science">École Polytechnique</a>]
 [Then PostDoc at Institut de Mathématiques de Marseille (I2M)]
 [Then PostDoc at LIS at Aix-Marseille Université]
 </div></li>
