--- a/group.html
+++ b/group.html
@@ -452,7 +452,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
   <li style="margin-bottom: 1ex;"><b><a href="https://poisson.chat/">Li-yao Xia</a></b>
   <ul>
     <li style="margin-top: 1ex;">Research Internship at Inria, 2015-04 to 2015-08:
-      <a href="students/topics/2015/quick-chick.pdf">Integrating Functional Logic Programming with Constraint Solving for Random Generation of Structured Data</a>
+      <a href="students/li-yao/masters.pdf">Integrating Functional Logic Programming with Constraint Solving for Random Generation of Structured Data</a>
     </li>
   </ul>
     <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>] [Then PhD student at <a href="https://www.cis.upenn.edu/~plclub/">University of Pennsylvania</a>]
