--- a/group.html
+++ b/group.html
@@ -174,7 +174,7 @@
     </li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
-  [PhD Student at University of Pennsylvania]
+  [PhD Student at University of Pennsylvania]<b>[Soon working on AI assisted verification at Microsoft Research]</b>
   </div>
   </li>
 
@@ -427,8 +427,9 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
       <a href="https://arxiv.org/abs/1602.04503">Partial type safety using Coq</a>
     </li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at Université Paris 7] [Then ATER at Université Sorbonne Paris Nord]
-    [Now R&amp;D Engineer at OCamlPro]
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at Université Paris 7]
+    [Then ATER at Université Sorbonne Paris Nord]<br/>
+    <b>[Now R&amp;D Engineer at OCamlPro]</b>
 </div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/diane-gallois-wong-998175206/">Diane Gallois-Wong</a></b>
