--- a/group.html
+++ b/group.html
@@ -63,7 +63,7 @@
   <li style="margin-bottom: 1ex;"><b><a href="https://jonathan.baumann.zip">Jonathan Baumann</a></b> (Research Intern, ENS Paris-Saclay)</li>
   <!-- started in April 2025 -->
 
-  <li style="margin-bottom: 1ex;"><a href="https://www.linkedin.com/in/julayleathermanbrooks/">Julay Leatherman-Brooks</a> (Research Intern, Portland State University) -- starting in July 2025</li>
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/julayleathermanbrooks/">Julay Leatherman-Brooks</a></b> (Research Intern, Portland State University) -- starting in July 2025</li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://robblanco.github.io/">Roberto Blanco</a></b>
   <ul>
