--- a/publications.html
+++ b/publications.html
@@ -152,7 +152,7 @@
     Jérémy Thibault.
     <b><a href="https://arxiv.org/abs/1907.05320">Trace-Relating Compiler Correctness and Secure Compilation</a></b>.
     In <a href="https://www.etaps.org/2020/esop">29th European Symposium on Programming (ESOP)</a>, pages 1--28. Springer, April 2020.
-    <b>Nominated for <a href="http://eatcs.org/index.php/best-etaps-paper">EATCS Award</a> for the best ETAPS 2020 paper in theoretical computer science</b>.
+    <b>Nominated for <a href="https://etaps.org/awards/best-paper/">EATCS Award</a> for the best ETAPS 2020 paper in theoretical computer science</b>.
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation/tree/different_traces">Coq development</a></li>
       <li>Superseded by journal paper entitled "An Extended Account of Trace-relating Compiler Correctness and Secure Compilation", see <a href="#journal">below</a>.</li>
@@ -168,6 +168,7 @@
     PACMPL, 4(<a href="https://popl20.sigplan.org/">POPL</a>):4:1--4:33, January 2020.
     <ul style="font-size: small">
       <li><a href="https://gitlab.inria.fr/kmaillar/dijkstra-monads-for-all/tree/relational">Proof-of-concept implementation in Coq</a>
+      <li><a href="https://www.youtube.com/watch?v=2tgp6MGoR1U">Video of POPL presentation</a>
     </ul>
   </li>
 
@@ -175,7 +176,7 @@
     Kenji Maillard,
     Danel Ahman,
     Robert Atkey,
-    Guido Martinez,
+    Guido Martínez,
     C&#259;t&#259;lin Hri&#539;cu,
     Exequiel Rivas, and
     Éric Tanter.
