--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 in <a href="https://en.wikipedia.org/wiki/Bochum">Bochum, Germany</a>.<br/>
 I am also Adjunct Professor (APL) in the <a href="https://informatik.rub.de/en/">Faculty of Computer Science</a>
 of <a href="https://www.ruhr-uni-bochum.de/en">Ruhr University Bochum (RUB)</a>
-and PI <!-- for CASA 2.0 it would be Participating Scientist -->
-of the <a href="https://casa.rub.de/en/">CASA Cluster of Excellence</a> at RUB.
+and a member of the <a href="https://casa.rub.de/en/">CASA Cluster of Excellence</a> at RUB.
 </p>
 
 <p style="width:42em; text-align: left">
