--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 in <a href="https://en.wikipedia.org/wiki/Bochum">Bochum, Germany</a>.<br/>
 I am also Adjunct Professor (APL) in the <a href="https://informatik.rub.de/en/">Faculty of Computer Science</a>
 of <a href="https://www.ruhr-uni-bochum.de/en">Ruhr University Bochum (RUB)</a>
-and a member of the <a href="https://casa.rub.de/en/">CASA Cluster of Excellence</a> at RUB.
+as well as a member of <a href="https://hgi.rub.de/en/">HGI</a> and
+of the <a href="https://casa.rub.de/en/">CASA Cluster of Excellence</a> at RUB.
 </p>
 
 <p style="width:42em; text-align: left">
@@ -555,7 +556,7 @@ MPRI website</a>.</p>
       memory safety,
       compartmentalization,
       dynamic monitoring,
-      integrity</li>
+      speculative execution defenses</li>
     <li style="margin-bottom: 1ex;">
       <em>programming-languages techniques</em>:
       type systems,
