--- a/index.html
+++ b/index.html
@@ -552,25 +552,26 @@ MPRI website</a>.</p>
 </p>
   <ul style="width:42em; text-align: left">
     <li style="margin-bottom: 1ex;">
-      <em>formal methods for computer security</em>:
-      memory safety,
+      <em>formal methods for security</em>:
+      secure compilation,
       compartmentalization,
-      dynamic monitoring,
-      speculative execution defenses</li>
+      memory safety,
+      speculative execution defenses,
+      information flow control,
+      security protocols</li>
     <li style="margin-bottom: 1ex;">
       <em>programming-languages techniques</em>:
-      type systems,
       program verification,
-      proof assistants,
-      property-based testing,
-      semantics,
-      formal metatheory,
-      certified tools</li>
+      machine-checked proofs,
+      dependent types,
+      formal semantics,
+      property-based testing</li>
     <li style="margin-bottom: 1ex;">
       <em>design and verification of security-critical systems</em>:
+      compilation chains,
       reference monitors,
-      secure compilation chains,
-      secure hardware</li>
+      tagged hardware architectures,
+      high-assurance crypto</li>
   </ul>
 
 <h2 id="group">Formally Verified Security Research Group</h2>
