--- a/group.html
+++ b/group.html
@@ -86,6 +86,17 @@
 
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><b><a href="">Basile Schlosser</a></b>
+  <ul>
+    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2025-02 to 2025-06:<br/>
+     <a href="">Formally Secure Compilation to the Micro-Policies Tagged Architecture</a>
+    </li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
+  [MSc Student at ENS Paris-Saclay]
+  </div>
+  </li>
+
   <li style="margin-bottom: 1ex;"><b><a href="https://dblp.org/pid/398/1897.html">Léon Ducruet</a></b>
   <ul>
     <li style="margin-top: 1ex;">Research Intern at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2024-10 to 2025-02:<br/>
