--- a/group.html
+++ b/group.html
@@ -57,13 +57,10 @@
   <li style="margin-bottom: 1ex;"><b><a href="https://sf.snu.ac.kr/yonghyun.kim/">Yonghyun Kim</a></b> (Postdoctoral Researcher, MPI-SP)</li>
   <!-- started in May 2025 -->
 
-  <li style="margin-bottom: 1ex;"><b><a href="">Basile Schlosser</a></b> (Research Intern, ENS Paris-Saclay)</li>
-  <!-- started in February 2025 -->
-
   <li style="margin-bottom: 1ex;"><b><a href="https://jonathan.baumann.zip">Jonathan Baumann</a></b> (Research Intern, ENS Paris-Saclay)</li>
   <!-- started in April 2025 -->
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/julayleathermanbrooks/">Julay Leatherman-Brooks</a></b> (Research Intern, Portland State University) -- starting in July 2025</li>
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/julayleathermanbrooks/">Julay Leatherman-Brooks</a></b> (Research Intern, Portland State University)<!-- -- starting in July 2025 --></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://robblanco.github.io/">Roberto Blanco</a></b>
   <ul>
@@ -107,8 +104,6 @@
   [MSc Student at ENS Lyon] [Now intern at Aarhus University]
   </div>
   </li>
-
-  <!-- starting in Sept 2024 -->
 
   <li style="margin-bottom: 1ex;"><b><a href="https://github.com/sharwig">Sebastian Harwig</a></b>
   <ul>
