--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@ I am very fortunate to work with a group of outstanding students and starting re
     Joseph Lenormand, and
     C&#259;t&#259;lin Hri&#539;cu.
     <b><a href="http://arxiv.org/abs/2503.19609">Nanopass Back-Translation of Call-Return Trees for Mechanized Secure Compilation Proofs</a></b>.
-    Accepted at ITP'25. Draft from March 2025.
+    To appear in <a href="https://icetcs.github.io/frocos-itp-tableaux25/itp/">16th International Conference on Interactive Theorem Proving (ITP)</a>. September 2025.
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/nanopass-bt">Rocq development</a></li>
     </ul>
@@ -619,11 +619,11 @@ I am very fortunate to work with a group of outstanding students and starting re
     Danel Ahman,
     C&#259;t&#259;lin Hri&#539;cu,
     Ruxandra Icleanu,
-    Guido Martínez
+    Guido Martínez,
     Exequiel Rivas, and
     Théo Winterhalter.
     <b><a href="http://arxiv.org/abs/2503.00404">SecRef*: Securely Sharing Mutable References Between Verified and Unverified Code in F*</a></b>.
-    Accepted at ICFP'25. Draft from February 2025.
+    To appear in PACMPL, 9(<a href="https://icfp25.sigplan.org/">ICFP</a>). October 2025.
     <ul style="font-size: small">
       <li><a href="https://github.com/andricicezar/fstar-io/tree/master/state">F* development</a></li>
     </ul>
