--- a/publications.html
+++ b/publications.html
@@ -26,6 +26,32 @@
 <ol start="1" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Jérémy Thibault,
+    Joseph Lenormand, and
+    C&#259;t&#259;lin Hri&#539;cu.
+    <b><a href="http://arxiv.org/abs/2503.19609">Nanopass Back-Translation of Call-Return Trees for Mechanized Secure Compilation Proofs</a></b>.
+    To appear in <a href="https://icetcs.github.io/frocos-itp-tableaux25/itp/">16th International Conference on Interactive Theorem Proving (ITP)</a>. September 2025.
+    <ul style="font-size: small">
+      <li><a href="https://github.com/secure-compilation/nanopass-bt">Rocq development</a></li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+    Cezar-Constantin Andrici,
+    Danel Ahman,
+    C&#259;t&#259;lin Hri&#539;cu,
+    Ruxandra Icleanu,
+    Guido Martínez,
+    Exequiel Rivas, and
+    Théo Winterhalter.
+    <b><a href="http://arxiv.org/abs/2503.00404">SecRef*: Securely Sharing Mutable References Between Verified and Unverified Code in F*</a></b>.
+    To appear in PACMPL, 9(<a href="https://icfp25.sigplan.org/">ICFP</a>). October 2025.
+    <ul style="font-size: small">
+      <li><a href="https://github.com/andricicezar/fstar-io/tree/master/state">F* development</a></li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Jonathan Baumann,
     Roberto Blanco,
     Léon Ducruet,
@@ -34,6 +60,7 @@
     <b><a href="http://arxiv.org/abs/2502.03203">FSLH: Flexible Mechanized Speculative Load Hardening</a></b>.
     In <a href="https://www.ieee-security.org/TC/CSF2025/">38th IEEE Computer Security Foundations Symposium (CSF)</a>.
     June 2025.
+    <b>Distinguished Paper Award</b>.
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/fslh-rocq">Rocq development</a></li>
     </ul>
@@ -531,7 +558,7 @@
 
 <h3>Journal Papers</h3>
 
-<ol id="journal" start="36" style="width:42em; text-align: left">
+<ol id="journal" start="38" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
     Philipp G. Haselwarter, 
@@ -634,14 +661,14 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 </ol>
 
 <h3>Books</h3>
-<ol start="43" style="width:42em; text-align: left">
+<ol start="45" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#539;cu and Roberto Blanco. <b><a href="https://mpi-sp-foe-2025.github.io/book-secf/">Software Foundations: Security Foundations</a></b>, Draft textbook, April 2025.</li>
   <li style="margin-bottom: 1ex;">Benjamin C. Pierce, Arthur Azevedo de Amorim, Chris Casinghino, Marco Gaboardi, Michael Greenberg, C&#259;t&#259;lin Hri&#539;cu, Vilhelm Sj&ouml;berg, and Brent Yorgey. <b><a href="https://softwarefoundations.cis.upenn.edu/lf-current/index.html">Software Foundations: Logical Foundations</a></b>, Electronic textbook, August 2018.</li>
   <li style="margin-bottom: 1ex;">Benjamin C. Pierce, Arthur Azevedo de Amorim, Chris Casinghino, Marco Gaboardi, Michael Greenberg, C&#259;t&#259;lin Hri&#539;cu, Vilhelm Sj&ouml;berg, Andrew Tolmach, and Brent Yorgey. <b><a href="https://softwarefoundations.cis.upenn.edu/plf-current/index.html">Software Foundations: Programming Language Foundations</a></b>, Electronic textbook, August 2018.</li>
 </ol>
 
 <h3>Book Chapter</h3>
-<ol start="46" style="width:42em; text-align: left">
+<ol start="48" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
    Leonidas Lampropoulos, Diane Gallois-Wong, C&#259;t&#259;lin
    Hri&#539;cu, John Hughes, Benjamin C. Pierce, and Li-yao Xia.
@@ -650,7 +677,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 </ol>
 
 <h3>Editor</h3>
-<ol start="47" style="width:42em; text-align: left">
+<ol start="49" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
   David Chisnall, Deepak Garg, C&#259;t&#259;lin Hri&#539;cu, Mathias Payer.<br/>
   <b><a href="http://dx.doi.org/10.4230/DagRep.11.10.173">Secure Compilation
@@ -698,7 +725,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 <!-- </ol> -->
 
 <h3>Theses</h3>
-<ol start="51" style="width:42em; text-align: left">
+<ol start="53" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#539;cu. <b><a href="https://catalin-hritcu.github.io/publications/catalin_habil.pdf">The Quest for Formally Secure Compartmentalizing Compilation</a></b>.<br/>Habilitation Thesis, ENS Paris, January 2019.
   <ul style="font-size: small">
@@ -762,33 +789,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 <!-- </ol> -->
 
 <h3>Drafts, Informal Publications, and Workshops</h3>
-<ol start="54" style="width:42em; text-align: left">
-
-  <li style="margin-bottom: 1ex;">
-    Jérémy Thibault,
-    Joseph Lenormand, and
-    C&#259;t&#259;lin Hri&#539;cu.
-    <b><a href="http://arxiv.org/abs/2503.19609">Nanopass Back-Translation of Call-Return Trees for Mechanized Secure Compilation Proofs</a></b>.
-    Accepted at ITP'25. Draft from March 2025.
-    <ul style="font-size: small">
-      <li><a href="https://github.com/secure-compilation/nanopass-bt">Rocq development</a></li>
-    </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;">
-    Cezar-Constantin Andrici,
-    Danel Ahman,
-    C&#259;t&#259;lin Hri&#539;cu,
-    Ruxandra Icleanu,
-    Guido Martínez
-    Exequiel Rivas, and
-    Théo Winterhalter.
-    <b><a href="http://arxiv.org/abs/2503.00404">SecRef*: Securely Sharing Mutable References Between Verified and Unverified Code in F*</a></b>.
-    Conditionally Accepted at ICFP'25. Draft from February 2025.
-    <ul style="font-size: small">
-      <li><a href="https://github.com/andricicezar/fstar-io/tree/master/state">F* development</a></li>
-    </ul>
-  </li>
+<ol start="56" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
     Roberto Blanco,
@@ -830,12 +831,12 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
     </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;">
-    Jérémy Thibault and
-    C&#259;t&#259;lin Hri&#539;cu.
-    <b><a href="https://popl21.sigplan.org/details/prisc-2021-papers/5/Nanopass-Back-Translation-of-Multiple-Traces-for-Secure-Compilation-Proofs">Nanopass back-translation of multiple traces for secure compilation proofs</a></b>.
-      Extended Abstract at Workshop on Principles of Secure Compilation (PriSC), January 2021.
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"> -->
+  <!--   Jérémy Thibault and -->
+  <!--   C&#259;t&#259;lin Hri&#539;cu. -->
+  <!--   <b><a href="https://popl21.sigplan.org/details/prisc-2021-papers/5/Nanopass-Back-Translation-of-Multiple-Traces-for-Secure-Compilation-Proofs">Nanopass back-translation of multiple traces for secure compilation proofs</a></b>. -->
+  <!--     Extended Abstract at Workshop on Principles of Secure Compilation (PriSC), January 2021. -->
+  <!-- </li> -->
 
   <!-- <li style="margin-bottom: 1ex;"> -->
   <!--           Deepak Garg, -->
