--- a/group.html
+++ b/group.html
@@ -209,7 +209,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
 [MSc student at <a href="http://www.maths.unitn.it/en">University of Trento</a>]
 [PhD student at Inria/ENS Paris, then at <a href="https://www.mpi-sp.org/">MPI-SP</a>/RUB]<br/>
-[<b>Now Formal Verification Researcher at the <a href="https://www.barkhauseninstitut.org">Barkhausen Institut</a> in Dresden</b>]
+[<b>Now Formal Verification Senior Researcher at the <a href="https://www.barkhauseninstitut.org">Barkhausen Institut</a> in Dresden</b>]
 <!-- https://dblp.org/pers/hd/a/Abate:Carmine -->
 </div></li>
 
