--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
     (<b>Artifact Evaluation Chair</b> in <a href="https://popl18.sigplan.org/">2018</a> and <a href="https://popl19.sigplan.org/">2019</a>;
      also PC Member in <a href="https://popl17.sigplan.org/">2017</a> and <a href="https://popl24.sigplan.org">2024</a>)
   <ul>
-  <li><a href="https://popl26.sigplan.org/">POPL 2026</a> submission deadline: 10 July 2025</li>
+  <!-- <li><a href="https://popl26.sigplan.org/">POPL 2026</a> submission deadline: 10 July 2025</li> -->
   <!-- <li>Early registration deadline: 14 December 2023</li> -->
   <li><a href="https://popl26.sigplan.org/">POPL 2026</a> symposium: 11-17 January 2026, Rennes, France</ul>
   </li>
