--- a/index.html
+++ b/index.html
@@ -150,6 +150,31 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
   </ul>
   </li>
 
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/CSFWweb/index.html">Computer Security Foundations</a>, CSF</b> (<b>Steering Committee Member</b> since 2024, <b>Test-of-Time Awards Chair</b> in <a href="https://csf2023.ieee-security.org">2023</a> and <a href="https://csf2024.ieee-security.org/">2024</a>; also PC Member in <a href="https://www.ieee-security.org/TC/CSF2020/">2020</a>, <a href="https://www.ieee-security.org/TC/CSF2021/">2021</a> and <a href="https://csf2024.ieee-security.org/">2024</a>)
+  <ul>
+  <li><a href="https://csf2026.ieee-security.org">CSF 2026</a> submission deadlines: <strike>24 July 2025</strike>, 9 October 2025, 29 January 2026</li>
+  <li><a href="https://csf2026.ieee-security.org/">CSF 2026</a>: July 26-29, Lisbon, Portugal (collocated with <a href="https://www.floc26.org/">FLoC 2026</a>)</li>
+  </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.sigplan.org/Conferences/CPP/"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP</b> (<b>Steering Committee Chair</b> since 2021;<br/> also <b>PC Chair and Conference Chair</b> in <a href="https://popl20.sigplan.org/home/CPP-2020">2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a>; also PC member in <a href="https://people.csail.mit.edu/adamc/cpp16/">2016</a>)
+<!-- https://popl24.sigplan.org/series/CPP -->
+  <ul>
+  <li><a href="https://popl26.sigplan.org/home/CPP-2026">CPP 2026</a> abstract deadline: 5 September 2025</li>
+  <li><a href="https://popl26.sigplan.org/home/CPP-2026">CPP 2026</a> submission deadline: 12 September 2025</li>
+  <li><a href="https://popl26.sigplan.org/home/CPP-2026">CPP 2026</a> conference: 12-13 January 2026, Rennes, France (with <a href="https://popl26.sigplan.org">POPL</a>)</li>
+  </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/series/prisc"><!-- Workshop on --> Principles of Secure Compilation</a>, PriSC</b> (<b>Steering Committee Chair</b> 2019--2023, <b>Steering Committee Member</b> since 2023, also <b>PC Chair</b> in <a href="https://popl18.sigplan.org/track/prisc-2018">2018</a>)
+  <ul>
+  <!-- <li><a href="https://popl25.sigplan.org/">PriSC 2025</a> submission deadline: 18 November 2024</li> -->
+  <!-- <li>Early registration deadline: 14 December 2023</li> -->
+  <li><a href="https://popl26.sigplan.org/home/prisc-2026">PriSC 2026</a> deadline: 17 October 2025</li>
+  <li><a href="https://popl26.sigplan.org/home/prisc-2026">PriSC 2026</a> workshop: 11-17 January 2026, Rennes, France (with <a href="https://popl26.sigplan.org/">POPL</a>)</li>
+  </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><b><a href="https://robblanco.github.io">Roberto "Rob" Blanco</a></b>, previously PostDoc in my group, started as Associate Professor at <a href="https://www.tue.nl/en/our-university/departments/mathematics-and-computer-science">TU Eindhoven</a> in May 2025.</li>
 
   <li style="margin-bottom: 1ex;">
@@ -166,15 +191,6 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
   former MSc intern in my group and longer-term collaborator, took an Assistant Professor position at
   the <a href="https://www.ece.ntua.gr/en/">National Technical University of Athens</a> in September 2024.</li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.sigplan.org/Conferences/CPP/"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP</b> (<b>Steering Committee Chair</b> since 2021;<br/> also <b>PC Chair and Conference Chair</b> in <a href="https://popl20.sigplan.org/home/CPP-2020">2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a>; also PC member in <a href="https://people.csail.mit.edu/adamc/cpp16/">2016</a>)
-<!-- https://popl24.sigplan.org/series/CPP -->
-  <ul>
-  <li><a href="https://popl26.sigplan.org/home/CPP-2026">CPP 2026</a> abstract deadline: 5 September 2025</li>
-  <li><a href="https://popl26.sigplan.org/home/CPP-2026">CPP 2026</a> submission deadline: 12 September 2025</li>
-  <li><a href="https://popl26.sigplan.org/home/CPP-2026">CPP 2026</a> conference: 11-17 January 2026, Rennes, France (with <a href="https://popl26.sigplan.org">POPL</a>)</li>
-  </ul>
-  </li>
-
   <li style="margin-bottom: 1ex;">
     <b><a href="https://www.sigsac.org/ccs/CCS2024/">Computer and Communications Security</a>, CCS</b> <!-- https://www.sigsac.org/ccs.html -->
     (<b>Track PC Chair</b> for Formal Methods and Programming Languages in <a href="https://www.sigsac.org/ccs/CCS2024">2024</a>,
@@ -183,22 +199,6 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
   <!-- <li>First submission deadline: <b>28 January 2024</b></li> -->
   <!-- <li>Second submission deadline: <b>29 April 2024</b></li> -->
   <!-- <li><a href="https://www.sigsac.org/ccs/CCS2024/">CCS 2024</a> Conference: 14-18 October 2024, Salt Lake City, Utah, USA</li> -->
-  </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/CSFWweb/index.html">Computer Security Foundations</a>, CSF</b> (<b>Steering Committee Member</b> since 2024, <b>Test-of-Time Awards Chair</b> in <a href="https://csf2023.ieee-security.org">2023</a> and <a href="https://csf2024.ieee-security.org/">2024</a>; also PC Member in <a href="https://www.ieee-security.org/TC/CSF2020/">2020</a>, <a href="https://www.ieee-security.org/TC/CSF2021/">2021</a> and <a href="https://csf2024.ieee-security.org/">2024</a>)
-  <ul>
-  <li><a href="https://csf2025.ieee-security.org/">CSF 2025</a>: June 16-20, 2025 - Santa Cruz, CA, USA</li>
-  <!-- <li><a href="https://csf2025.ieee-security.org">CSF 2025</a> submission deadlines: <strike>28 May 2024, 1 October 2024</strike>, 4 February 2025</li> -->
-  </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/series/prisc"><!-- Workshop on --> Principles of Secure Compilation</a>, PriSC</b> (<b>Steering Committee Chair</b> 2019--2023, <b>Steering Committee Member</b> since 2023, also <b>PC Chair</b> in <a href="https://popl18.sigplan.org/track/prisc-2018">2018</a>)
-  <ul>
-  <!-- <li><a href="https://popl25.sigplan.org/">PriSC 2025</a> submission deadline: 18 November 2024</li> -->
-  <!-- <li>Early registration deadline: 14 December 2023</li> -->
-  <li><a href="https://popl26.sigplan.org/home/prisc-2026">PriSC 2026</a> deadline: 17 October 2025</li>
-  <li><a href="https://popl26.sigplan.org/home/prisc-2026">PriSC 2026</a> workshop: 11-17 January 2026, Rennes, France (with <a href="https://popl26.sigplan.org/">POPL</a>)</li>
   </ul>
   </li>
 
