--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
   <!-- <li><a href="https://popl25.sigplan.org/">PriSC 2025</a> submission deadline: 18 November 2024</li> -->
   <!-- <li>Early registration deadline: 14 December 2023</li> -->
   <li><a href="https://popl26.sigplan.org/home/prisc-2026">PriSC 2026</a> deadline: 17 October 2025</li>
-  <li><a href="https://popl26.sigplan.org/home/prisc-2026">PriSC 2026</a> workshop: 11-17 January 2026, Rennes, France (with <a href="https://popl26.sigplan.org/">POPL</a>)</li>
+  <li><a href="https://popl26.sigplan.org/home/prisc-2026">PriSC 2026</a> workshop: 11 January 2026, Rennes, France (with <a href="https://popl26.sigplan.org/">POPL</a>)</li>
   </ul>
   </li>
 
