--- a/group.html
+++ b/group.html
@@ -247,7 +247,8 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
   </div>  
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://web.archive.org/web/20230111142712/https://dcc.fceia.unr.edu.ar/~erivas/">Exequiel Rivas</a></b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.etis.ee/CV/erivas/eng/">Exequiel Rivas</a></b>
+  <!-- http://web.archive.org/web/20230111142712/https://dcc.fceia.unr.edu.ar/~erivas/ -->
   <ul>
     <li style="margin-top: 1ex;">Starting Researcher Position at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> 2019-03 to 2021-02:<br/>
       <a href="https://catalin-hritcu.github.io/students/topics/2018/fstar-topics-tezos.pdf">The Formal Semantics and Evolution of the F* Verification System</a></li>
