--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
   <li style="margin-bottom: 1ex;"><b><a href="https://www.sigplan.org/Conferences/CPP/"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP</b> (<b>Steering Committee Chair</b> since 2021;<br/> also <b>PC Chair and Conference Chair</b> in <a href="https://popl20.sigplan.org/home/CPP-2020">2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a>; also PC member in <a href="https://people.csail.mit.edu/adamc/cpp16/">2016</a>)
 <!-- https://popl24.sigplan.org/series/CPP -->
   <ul>
-  <li><a href="https://popl26.sigplan.org/home/CPP-2026">CPP 2026</a> abstract deadline: 5 September 2025</li>
-  <li><a href="https://popl26.sigplan.org/home/CPP-2026">CPP 2026</a> submission deadline: 12 September 2025</li>
+  <!-- <li><a href="https://popl26.sigplan.org/home/CPP-2026">CPP 2026</a> abstract deadline: 5 September 2025</li> -->
+  <!-- <li><a href="https://popl26.sigplan.org/home/CPP-2026">CPP 2026</a> submission deadline: 12 September 2025</li> -->
   <li><a href="https://popl26.sigplan.org/home/CPP-2026">CPP 2026</a> conference: 12-13 January 2026, Rennes, France (with <a href="https://popl26.sigplan.org">POPL</a>)</li>
   </ul>
   </li>
