--- a/group.html
+++ b/group.html
@@ -428,7 +428,8 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
 [Now Senior Software Engineer at Mozilla]
 </div></li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://web.archive.org/web/20231210053550/https://www.engboris.fr/research/">Boris Eng</a></b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/boris-eng-a35317297/">Boris Eng</a></b>
+  <!-- https://web.archive.org/web/20231210053550/https://www.engboris.fr/research/ -->
   <ul>
     <li style="margin-top: 1ex;">Research Internship at Inria (advised by Yannis Juglaret), 2016-04 to 2016-06:<br/>
       <a href="https://arxiv.org/abs/1602.04503">Partial type safety using Coq</a>
@@ -506,7 +507,7 @@ Formal Verification Researcher at <a href="https://ethereum.foundation/">Ethereu
 [Then <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a> MSc student]
 [Then PhD student at <a href="https://www.cs.princeton.edu/">Princeton University</a>]<br/>
 [Then PostDoc at University of Wisconsin-Madison]
-<b>[Now Applied Scientist at Amazon Web Services (AWS)]</b>
+<b>[Now Senior Applied Scientist at Amazon Web Services (AWS)]</b>
 </div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://de.linkedin.com/in/busenius">Alex Busenius</a></b>
@@ -516,7 +517,7 @@ Formal Verification Researcher at <a href="https://ethereum.foundation/">Ethereu
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.cs.uni-saarland.de/">Saarland University</a>] <!-- [First employment <a href="http://www.de.capgemini.com">Capgemini</a>] --> [Now Technical Lead at <a href="http://www.luxoft.com/">Luxoft</a>]</div></li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://www.tarrach.eu/">Thorsten Tarrach</a></b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/ttarrach/">Thorsten Tarrach</a></b>
   <ul>
     <li style="margin-top: 1ex;">Master's Thesis, Finished 2010-08-31:<br/> <a href="https://web.archive.org/web/20150602074713/http://www.infsec.cs.uni-saarland.de/projects/dverify">Automatically Verifying "M" Modeling Language Constraints</a> (<a href="https://thorstent.github.io/theses/master.pdf">thesis</a>)</li>
     <li style="margin-top: 1ex;">Bachelor's Thesis, Finished 2008-10-27:<br/> <a href="https://thorstent.github.io/theses/bachelor.pdf"> Spi2F# - A Prototype Code Generator for Security Protocols</a></li>
