--- a/publications.html
+++ b/publications.html
@@ -29,8 +29,9 @@
     Jérémy Thibault,
     Joseph Lenormand, and
     C&#259;t&#259;lin Hri&#539;cu.
-    <b><a href="http://arxiv.org/abs/2503.19609">Nanopass Back-Translation of Call-Return Trees for Mechanized Secure Compilation Proofs</a></b>.
-    To appear in <a href="https://icetcs.github.io/frocos-itp-tableaux25/itp/">16th International Conference on Interactive Theorem Proving (ITP)</a>. September 2025.
+    <b><a href=" http://arxiv.org/abs/2503.19609">Nanopass Back-Translation of Call-Return Trees for Mechanized Secure Compilation Proofs</a></b>.
+    In <a href="https://icetcs.github.io/frocos-itp-tableaux25/itp/">16th International Conference on Interactive Theorem Proving (ITP)</a>.
+    LIPIcs, Volume 352, pp. 29:1-29:20, Schloss Dagstuhl – Leibniz-Zentrum für Informatik, September 2025.
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/nanopass-bt">Rocq development</a></li>
     </ul>
